Fixed scrolling issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -44,12 +44,13 @@ body {
     padding: 20px 0 20px 0;
     max-width: 1280px;
     margin: 0 auto;
+    overflow-x: hidden;
 
 }
 
-body:has(dialog[open]) {
+/*body:has(dialog[open]) {
     overflow: hidden;
-}
+}*/
 
 header {
     display: flex;
@@ -239,9 +240,9 @@ nav {
 #menu {
     display: flex;
     flex-direction: column;
-    position: absolute;
+    position: fixed;
     top: 0;
-    left: 100%;
+    left: 2000px;
     width: 100%;
     height: 100vh;
     padding: 20px;
